--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
                     </nav>
                     <form action="" method="">
                         <label class="search_label" for="form1"><img src="images/search.png"></label>
-                        <input class="search" type="search" autocomplete="off" name="q" id="form1" placeholder="Риба заливна" value>              
+                        <input class="search" type="search" autocomplete="off" name="q" id="form1" value>              
                     </form>
                     
                     <ul class="lang">
